# openfhe-boolean-circuit-evaluator

./: CMakeLists.txt  Governance.md  LICENSE  License.md  Makefile  README.md  Release_Notes.md
examples/: CMakeLists.txt
examples/new_bristol_ckts/: CMakeLists.txt
examples/new_bristol_ckts/arith/: CMakeLists.txt
examples/new_bristol_ckts/crypto/: CMakeLists.txt
examples/new_bristol_ckts/fp/: CMakeLists.txt
examples/old_bristol_ckts/: CMakeLists.txt
examples/old_bristol_ckts/arith/: CMakeLists.txt
examples/old_bristol_ckts/crypto/: CMakeLists.txt  md5-test.txt  sha-1-test.txt  sha-256-test.txt
examples/simple_ckts/: CMakeLists.txt
examples/simple_ckts/adder_2bit/: CMakeLists.txt  adder_2bit.out
examples/simple_ckts/parity/: CMakeLists.txt  parity.out
src/: CMakeLists.txt  TB_adder_2bit.cpp  TB_adders.cpp  TB_aes.cpp  TB_comparators.cpp  TB_crypto.cpp  TB_md5.cpp  TB_multipliers.cpp  TB_parity.cpp  TB_sha256.cpp  analyze.cpp  analyze.h  assemble.cpp  assemble.h  circuit.cpp  circuit.h  debug.h  gate.cpp  gate.h  test_adder.cpp  test_adder.h  test_aes.cpp  test_aes.h  test_comparator.cpp  test_comparator.h  test_crypto.cpp  test_crypto.h  test_md5.cpp  test_md5.h  test_multiplier.cpp  test_multiplier.h  test_parity.cpp  test_parity.h  test_sha256.cpp  test_sha256.h  utils.cpp  utils.h  wire.cpp  wire.h
